--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </style>
     </head>
 
-    <body background="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\bgimg.jpg">
+    <body background="bgimg.jpg">
     
 
 
