--- a/gallary (n).html
+++ b/gallary (n).html
@@ -87,35 +87,35 @@
     <div class="gallery">
         
         <div class="gallery-item">
-            <img src="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\IMG_0199.jpg"alt="Image 1">
+            <img src="IMG_0199.jpg"alt="Image 1">
             <h1>Purse</h1>
         </div>
         <div class="gallery-item">
-            <img src="D:\avani website vscodes\gallery.html\doily.jpg" alt="Image 2">
+            <img src="doily.jpg" alt="Image 2">
             <h1>Flower Pot Designs</h1>
         </div>
         <div class="gallery-item">
-            <img src="D:\avani website vscodes\gallery.html\da05f659a0841840931ba79e01a519a5.jpg"alt="Image 3">
+            <img src="da05f659a0841840931ba79e01a519a5.jpg"alt="Image 3">
             <h1>Wallets</h1>
         </div>
         <div class="gallery-item">
-            <img src="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\5BBACE66-8DAD-4835-927F-D3B2AB9240DD.png"alt="Image 2">
+            <img src="5BBACE66-8DAD-4835-927F-D3B2AB9240DD.png"alt="Image 2">
             <h1>Crochet Tops</h1>
         </div>
          <div class="gallery-item">
-            <img src="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\IMG_1800.jpeg" alt="Image 2">
+            <img src="IMG_1800.jpeg" alt="Image 2">
             <h1>Key Chains</h1>
         </div>
          <div class="gallery-item">
-            <img src="D:\avani website vscodes\gallery.html\Crochet-Tote-Bag-Pattern-Free.jpg" alt="Image 2">
+            <img src="Crochet-Tote-Bag-Pattern-Free.jpg" alt="Image 2">
             <h1>Tote Bags</h1>
         </div>
          <div class="gallery-item">
-            <img src="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\round-crochet-coasters-600x473.jpg" alt="Image 2">
+            <img src="Cround-crochet-coasters-600x473.jpg" alt="Image 2">
             <h1>Tea Coasters</h1>
         </div>
          <div class="gallery-item">
-            <img src="C:\Users\DR.J.A.KHOT\Desktop\Website RIDHIMA CROCEHT\images\background.jpg"alt="Image 2">
+            <img src="background.jpg"alt="Image 2">
             <h1>Pillow Covers</h1>
         </div> 
         
